@@ -98,22 +98,22 @@ int job_cmd(JCR *jcr)
    jcr->JobId = JobId;
    jcr->VolSessionId = newVolSessionId();
    jcr->VolSessionTime = VolSessionTime;
-   strcpy(jcr->Job, job);
+   bstrncpy(jcr->Job, job, sizeof(jcr->Job));
    unbash_spaces(job_name);
-   jcr->job_name = get_memory(strlen(job_name) + 1);
-   strcpy(jcr->job_name, job_name);
+   jcr->job_name = get_pool_memory(PM_NAME);
+   pm_strcpy(&jcr->job_name, job_name);
    unbash_spaces(client_name);
-   jcr->client_name = get_memory(strlen(client_name) + 1);
-   strcpy(jcr->client_name, client_name);
+   jcr->client_name = get_pool_memory(PM_NAME);
+   pm_strcpy(&jcr->client_name, client_name);
    unbash_spaces(fileset_name);
-   jcr->fileset_name = get_memory(strlen(fileset_name) + 1);
-   strcpy(jcr->fileset_name, fileset_name);
+   jcr->fileset_name = get_pool_memory(PM_NAME);
+   pm_strcpy(&jcr->fileset_name, fileset_name);
    jcr->JobType = JobType;
    jcr->JobLevel = level;
    jcr->no_attributes = no_attributes;
    jcr->spool_attributes = spool_attributes;
-   jcr->fileset_md5 = get_memory(strlen(fileset_md5) + 1);
-   strcpy(jcr->fileset_md5, fileset_md5);
+   jcr->fileset_md5 = get_pool_memory(PM_NAME);
+   pm_strcpy(&jcr->fileset_md5, fileset_md5);
    free_memory(job);
    free_memory(job_name);
    free_memory(client_name);
